<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="361dp"
        android:layout_height="233dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_7"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/siete"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_8"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ocho"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_9"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nueve"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_4"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cuatro"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_5"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cinco"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_6"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seis"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_1"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uno"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_2"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dos"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_3"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tres"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_0"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/cero"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#FFFFFF" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_st" />

    <Button
        android:id="@+id/btn_ingresar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="141dp"
        android:layout_height="64dp"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="36dp"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_limpiar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="141dp"
        android:layout_height="64dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="36dp"
        android:text="@string/limpiar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#FFFFFF" />

    <ImageView
        android:id="@+id/img_st"
        android:layout_width="128dp"
        android:layout_height="140dp"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/stlogoblanco" />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_inicio"
        android:inputType="numberPassword"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="88dp"
        android:layout_height="77dp"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/securitybox" />

</androidx.constraintlayout.widget.ConstraintLayout>